# VultrSandbox

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  Readme.md  build_shaders.sh  imgui.ini
res/: cube.fbx  test_save.vultr
res/materials/: cube.mat  road.mat  rock.mat  skybox.mat  sphere.mat  sword.mat  teapot.mat
res/materials/XWing/: XWing-fuselage.mat
res/meshes/: plane.fbx  sphere.fbx  teapot.fbx
res/meshes/XWing/: cockpit.fbx  left-bottom-wing.fbx  left-upper-wing.fbx  right-bottom-wing.fbx  right-upper-wing.fbx
res/shaders/: pbr.glsl  skybox.glsl  skybox.mat
src/: main.cpp  sources.cpp
src/components/: components.h
